# Building-Low-Latency-Applications-with-CPP

./: .gitignore  README.md
Chapter10/: CMakeLists.txt
Chapter10/common/: logging.h  mcast_socket.cpp  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  thread_example.cpp  thread_utils.h
Chapter10/exchange/: exchange_main.cpp
Chapter10/trading/: trading_main.cpp
Chapter11/common/: lf_queue.h  logging.h  macros.h  mcast_socket.h  perf_utils.h  socket_example.cpp  socket_utils.cpp  socket_utils.h  tcp_socket.h  time_utils.h
Chapter11/notebooks/: perf_analysis.ipynb
Chapter11/scripts/: run_exchange_and_clients.sh
Chapter11/trading/: trading_main.cpp
Chapter12/: CMakeLists.txt
Chapter12/benchmarks/: CMakeLists.txt  hash_benchmark.cpp  logger_benchmark.cpp  release_benchmark.cpp
Chapter12/common/: lf_queue.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  opt_logging.h  opt_mem_pool.h  perf_utils.h  socket_utils.cpp  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_utils.h  types.h
Chapter12/exchange/: exchange_main.cpp
Chapter12/exchange/market_data/: market_update.h  snapshot_synthesizer.h
Chapter12/exchange/matcher/: matching_engine.h  me_order.h  unordered_map_me_order_book.cpp  unordered_map_me_order_book.h
Chapter12/exchange/order_server/: client_request.h  order_server.cpp  order_server.h
Chapter12/notebooks/: perf_analysis.ipynb
Chapter12/scripts/: build.sh  no_clean_build.sh  run_benchmarks.sh  run_clients.sh
Chapter12/trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
Chapter12/trading/order_gw/: order_gateway.cpp  order_gateway.h
Chapter12/trading/strategy/: feature_engine.h  liquidity_taker.h  market_maker.h  market_order.cpp  market_order.h  market_order_book.cpp  om_order.h  order_manager.h  position_keeper.h  risk_manager.h  trade_engine.cpp  trade_engine.h
Chapter3/: alignment.cpp  branch.cpp  composition.cpp  crtp.cpp  induction.cpp  loop_invariant.cpp  loop_unroll.cpp  pointer_alias.cpp  rvo.cpp  strength.cpp  strict_alias.cpp  tail_call.cpp  vector.cpp
Chapter4/: CMakeLists.txt  build.sh  lf_queue.h  logging.cpp  logging.h  logging_example.cpp  macros.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  run_examples.sh  socket_example.cpp  socket_utils.cpp  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h
Chapter6/: CMakeLists.txt  build.sh
Chapter6/common/: CMakeLists.txt  (+6 more)
Chapter7/: CMakeLists.txt  build.sh
Chapter7/exchange/: CMakeLists.txt
Chapter7/exchange/market_data/: market_data_publisher.cpp  snapshot_synthesizer.cpp
Chapter7/exchange/order_server/: order_server.h
Chapter8/common/: CMakeLists.txt  lf_queue.h  lf_queue_example.cpp  mcast_socket.h  mem_pool_example.cpp  thread_utils.h  time_utils.h  types.h
Chapter9/: CMakeLists.txt
Chapter9/exchange/market_data/: snapshot_synthesizer.h
Chapter9/exchange/matcher/: matching_engine.cpp  me_order_book.h
Chapter9/trading/order_gw/: order_gateway.cpp
Chapter9/trading/strategy/: feature_engine.h  liquidity_taker.cpp  liquidity_taker.h  market_maker.cpp  market_maker.h  market_order.h  market_order_book.h  order_manager.h  risk_manager.cpp  risk_manager.h  trade_engine.cpp  trade_engine.h
(+65 files in other folders)
